# rs-example-explorer

./: README.md  index.html  package.json  vite.config.ts
src/: App.svelte  app.postcss  cargo.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cargo.rs  main.rs
src/lib/: Chevron.svelte  Node.svelte  Welcome.svelte
